# D-OnnxRuntime

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  dub.json
cmake/: BuildOnnxRuntime.cmake  FetchOnnxRuntime.cmake
csrc/: onnxrt_mock.c  onnxrt_ort.cpp  onnxrt_stub.c  v3d_ai_onnx_mock.c  v3d_ai_onnx_ort.cpp  v3d_ai_onnx_stub.c
doc/: DESIGN.md
examples/: rank_smoke.d  score_smoke.d
include/: onnxrt.h  v3d_ai_onnx.h
source/onnxrt/: backend.d  c.d
source/v3d_ai_onnx/: backend.d  c.d
tools/: make_test_model.py
